spacing remains an issue, sometimes. so it shall be

--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -70,6 +70,7 @@
 .short-post {
     display: flex;
     width: 100%;
+    padding: 2px;
     flex-direction: column;
     align-items: center;
     background-color: var(--color-background-2);
