--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -99,8 +99,6 @@
         width: 95%;
     }
 
-    .search-info {
-    }
 }
 
 @media only screen and (max-width: 400px) {
